--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1>
                     <div class="typed-text d-none">DevOps Engineer</div>
                     <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
-                        <a href="resume/SIVAKUMAR  CHINNASAMY.pdf" class="btn btn-outline-light mr-5">Download CV</a>  
+                        <a href="https://docs.google.com/document/d/1SAzc6wvG6qZSLANfDEcjeBtdULraYrKq/edit?usp=sharing&ouid=113355369904556221140&rtpof=true&sd=true" class="btn btn-outline-light mr-5" target="_blank" >Download CV</a>  
                     </div>
                 </div>
             </div>
@@ -162,8 +162,15 @@
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                             <h5 class="font-weight-bold mb-1">DevOps Engineer (Internship)</h5>
-                            <p class="mb-2"><strong>Ladybird Web Solution Pvt Ltd</strong> | <small>08/2024 - Current</small></p>
+                            <p class="mb-2"><strong>Ladybird Web Solution Pvt Ltd</strong> | <small>08/2024 - 11/2024</small></p>
                             <p></p>
+                        </div>
+                            <div class="position-relative mb-4">
+                                <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
+                                <h5 class="font-weight-bold mb-1">Trainee DevOps Engineer</h5>
+                                <p class="mb-2"><strong>Ladybird Web Solution Pvt Ltd</strong> | <small>12/2024 - Current</small></p>
+                                <p></p>
+                            </div>
                         </div>
                     </div>
                 </div>
